--- a/index.html
+++ b/index.html
@@ -3,7 +3,89 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Le developpeur</title>
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
-	<body></body>
+	<body>
+		<header>
+			<div class="boxdev">developpeur</div>
+			<img class="bandeau" src="img/MicrosoftTeams-image (9).png" alt="" />
+		</header>
+		<main>
+			<h1 class="title">Le developpeur</h1>
+			<div>
+				<p class="texte">
+					Un développeur est avant tout un expert des langages informatiques. Il
+					doit donc maîtriser un ou plusieurs langages ainsi que les concepts
+					attenants (par exemple, le concept d'héritage pour un langage orienté
+					objet).
+				</p>
+				<br />
+				<p class="texte">
+					Bien souvent les connaissances techniques découlent du domaine
+					d'application. Par exemple dans le cadre de programmation Web (en
+					rapport avec l'Internet) les compétences requises sont spécifiques en
+					langages (HTML, CSS, JavaScript, PHP par exemple) et en logiciels
+					(Frontpage ou Dreamweaver par exemple). Dans le multimédia off-line
+					(cédéroms, bornes interactives, etc.) tout en travaillant avec le
+					directeur artistique, le développeur restera le garant des
+					spécificités techniques des divers programmes réalisés par les
+					infographistes.
+				</p>
+				<br />
+				<p class="texte">
+					D'une manière générale, le développeur doit aussi maîtriser
+					l'environnement d'exécution de son programme, que ce soit un système
+					d'exploitation pour un logiciel PC ou un microcontrôleur pour un
+					logiciel embarqué Micrologiciel. C'est cet environnement qui impose
+					des contraintes au logiciel (taille mémoire disponible, vitesse de
+					calcul)
+				</p>
+				<p class="texte">
+					Rigueur, sens de la méthode, qualités relationnelles, rapidité
+					d'exécution et facilité de s'adapter à de nouveaux langages sont
+					autant de qualités demandées. Il faut également faire preuve
+					d'autonomie.
+				</p>
+				<p class="texte">
+					Le développeur peut trouver de nombreux endroits et façons de
+					travailler. Il peut être employé par un éditeur de logiciel, une
+					Entreprise de services du numérique (ESN) anciennement SSII ou SS2I,
+					ou même dans une entreprise dont le cœur de métier n'est pas
+					l'informatique mais possède en interne un service informatique (DSI).
+					Il est aussi possible de travailler à son compte, en tant que
+					travailleur indépendant. Il est à noter que l'essence même du métier
+					rend certainement plus facile qu'ailleurs le travail à distance ou
+					télétravail.
+				</p>
+				<img class="imgmain" src="img/code.jpg" alt="lignedecode" />
+			</div>
+			<h1 class="title">Media queries</h1>
+			<img class="imgmain" src="img/MicrosoftTeams-image (12).png" alt="" />
+			<p class="texte">
+				Les requêtes média (media queries) permettent de modifier l'apparence
+				d'un site ou d'une application en fonction du type d'appareil
+				(impression ou écran par exemple) et de ses caractéristiques (la
+				résolution d'écran ou la largeur de la zone d'affichage (viewport) par
+				exemple).
+			</p>
+			<p class="texte">
+				Une requête média se compose d'un type de média optionnel et d'une ou
+				plusieurs expressions de caractéristiques de média. Plusieurs requêtes
+				peuvent être combinées entre elles grâce à des opérateurs logiques. Les
+				requêtes média ne sont pas sensibles à la casse.
+			</p>
+			<p class="texte">
+				Une requête média vaut true si le type de média correspond à l'appareil
+				utilisé pour l'affichage du document et si toutes les expressions
+				relatives aux caractéristiques sont vraies. Les requêtes qui utilisent
+				des types de média inconnus valent toujours false.
+			</p>
+			<img class="imgmain2" src="img/MicrosoftTeams-image (10).png" alt="" />
+			<img class="imgmain3" src="img/MicrosoftTeams-image (11).png" alt="" />
+		</main>
+		<footer>
+			<p>© 2024 Vera Dos Santos - LePoleS</p>
+		</footer>
+	</body>
 </html>
